# krs-openai-cookbook

./: .buildinfo  .gitignore  README.md  analyze-text.html  augmented-generation.html  choosing_models.html  fine-tuning.html  genindex.html  gpt-defined.html  introduction.html  llm-defined.html  llm-use-cases.html  notes.html  objects.inv  openai-api.html  openai-cli.html  openai-copilot.html  openai-example.html  openai-setup.html  openai-text-analysis.html  programming-assistance.html  scratch.html  search.html  searchindex.js  setting-up-openai.html  takeaways.html  welcome.html
_sources/: analyze-text.ipynb  augmented-generation.ipynb  choosing_models.md  fine-tuning.md  introduction.ipynb  langchain.ipynb  llm-defined.md  notes.md  openai-cli.ipynb  openai-copilot.md  openai-setup.ipynb  openai-text-analysis.ipynb  scratch.ipynb  speech-to-text.ipynb  takeaways.md  text-classification.ipynb  welcome.md
arxiv-extractor/: pyproject.toml
arxiv-extractor/notebooks/: arxiv-extract-1-create.ipynb  arxiv-extract-4-map.ipynb
docs/: _config.yml  _toc.yml  choosing_models.md  gpt-defined.md  introduction.ipynb  llm-use-cases.md  openai-arxiv-analysis.ipynb  openai-copilot.md  openai-setup.ipynb  openai-text-analysis.ipynb  references.bib  requirements.txt  takeaways.md  welcome.md
docs/_build/.doctrees/: analyze-text.doctree  augmented-generation.doctree  choosing_models.doctree  environment.pickle  fine-tuning.doctree  function-calling.doctree  gpt-defined.doctree  introduction.doctree  langchain.doctree  llm-defined.doctree  llm-use-cases.doctree  notes.doctree  openai-api.doctree  openai-cli.doctree  openai-copilot.doctree  openai-example.doctree  openai-setup.doctree  openai-text-analysis.doctree  programming-assistance.doctree  scratch.doctree  setting-up-openai.doctree  speech-to-text.doctree  takeaways.doctree  text-classification.doctree  welcome.doctree
docs/_build/html/: choosing_models.html  function-calling.html  genindex.html  gpt-defined.html  introduction.html  langchain.html  llm-use-cases.html  notes.html  objects.inv  openai-api.html  openai-cli.html  openai-copilot.html  openai-setup.html  openai-text-analysis.html  scratch.html  search.html  searchindex.js  speech-to-text.html  takeaways.html  text-classification.html  welcome.html
docs/_build/html/_sources/: function-calling.ipynb  openai-api.ipynb  openai-setup.ipynb  setting-up-openai.ipynb  takeaways.md  welcome.md
docs/_build/jupyter_execute/: augmented-generation.ipynb  function-calling.ipynb  introduction.ipynb  langchain.ipynb  openai-api.ipynb  openai-cli.ipynb  openai-example.ipynb  openai-setup.glue.json  openai-setup.ipynb  openai-text-analysis.ipynb  scratch.ipynb  setting-up-openai.glue.json  setting-up-openai.ipynb  speech-to-text.ipynb  text-classification.ipynb
docs/data/: arxiv_metadata.csv  extracted_data.csv  extracted_data.parquet
docs/mktg_ex/: mktg_ex.py  results.csv  simulated_survey_personas.csv
llm-plugins/example-plugin/: llm_test.py  pyproject.toml
llm-plugins/openai-batch/: Makefile
llm-plugins/openai-batch/tests/: config-test-1.yml
llm-plugins/openai-batch/tests/data/: arxiv_metadata-1.csv  arxiv_metadata-10.csv
notebooks/: output.csv  run_openai.ipynb
notebooks/data/: 1_1.docx  2_1.docx  3_1.docx
openai-batch/: Makefile  pyproject.toml
openai-batch-example/: 2024-10-17-responses.jsonl  batch-requests.jsonl  batch-responses.jsonl  config.json  prompt-template.json  simulated_survey_personas-sample.csv  test1-data.csv
openai-batch/llm_batch/: cli.py
openai-batch/openai_batch/: cli.py
openai-batch/textual-apps/: openai_batch.py  stopwatch.py
openai-helper/: .gitignore  2310.00014.json  pyproject.toml
openai-helper/notebooks/: arxiv-extract-1-create.ipynb  arxiv-extract-2-openai.ipynb  arxiv-extract-3-eval.ipynb  fine-tuning_news.ipynb  map-test.ipynb  news.csv  scratch.ipynb
openai-helper/openaihelper/: cli.py  config.yaml  functions.py  utils.py
openai-helper/openaihelper/data/: config.yml
openai-helper/tests/: config.yml  conftest.py  test_cli.py  test_functions.py
openai-helper/tests/data/: arxiv_metadata-10_responses.csv
openai-helper/tests/data/text/: RAG-NLP.txt  gpt-4.txt  lms-for-economic-research.txt  survey-of-llms.txt
openaihelper/: .gitignore  Makefile  README.md  pyproject.toml
openaihelper/notebooks/: openai-test.ipynb  vertexai-test.ipynb
openaihelper/openai-batch-test/: batch-requests.jsonl  config.yml  convert-to-csv.ipynb
openaihelper/openaihelper/: cli.py
openaihelper/tests/data/: arxiv_metadata-100.csv  arxiv_metadata-2.csv
openaihelper/tests/data/text/: rlhf.txt  textual-analysis-in-accounting.txt
