[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openai-batch"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version", "description"]
dependencies = [
    "cyclopts",
    "pyyaml", 
    "polars",
    "openai",
    "tiktoken",
    "tenacity",
    "PyMuPDF",
    "vertexai",
    "google-auth",
    "requests",
    "chevron",
    "python-dotenv",
    "llm",
]

[project.urls]
Home = "https://github.com/rs-kellogg/krs-openai-cookbook/llm-plugins/openai-batch"

[project.optional-dependencies]
test = [
  "pytest",
]
lint = [
  "ruff"
]
notebook = [
  "jupyterlab",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["llm_batch"]

[tool.hatch.build.targets.wheel]
packages = ["llm_batch"]

[project.scripts]
openai-batch = "llm_batch.cli:app"

[tool.setuptools.package-data]
"llm_batch.data" = ["*.yml"]

[tool.hatch.version]
path = "llm_batch/__init__.py"

# [project.entry-points.llm]
# batch = "llm_batch/cli"
