[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openai-batch"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version", "description"]
dependencies = [
    "cyclopts",
    "pyyaml", 
    "polars",
    "openai",
    "tiktoken",
    "tenacity",
    "PyMuPDF",
    "vertexai",
    "google-auth",
    "requests",
    "chevron",
    "python-dotenv",
    "llm",
    "textual",
    "elia-chat",
]

[project.urls]
Home = "https://github.com/rs-kellogg/krs-openai-cookbook/llm-plugins/openai-batch"

[project.optional-dependencies]
test = [
  "pytest",
]
lint = [
  "ruff"
]
notebook = [
  "jupyterlab",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["openai_batch"]

[tool.hatch.build.targets.wheel]
packages = ["openai_batch"]

[project.scripts]
openai-batch = "openai_batch.cli:app"

[tool.setuptools.package-data]
"openai_batch.data" = ["*.yml"]

[tool.hatch.version]
path = "openai_batch/__init__.py"

